--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
                     <div class="skill-icon"><i class="far fa-file-code"></i></div>
                     <div class="skill-title"><h2>Skills</h2></div>
                     <div class="skill-message">
-                        <p>My skills are HTML5, CSS3, JavaScript ES6 and GitHub.</p>
+                        <p>Some of my skills include HTML, CSS, Sass, JavaScript and Github</p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="projects-wrapper" id="projects">
-            <h1 class="projects-title">My Top Projects</h1>
+            <h1 class="projects-title">Top Projects</h1>
         <div class="projects-container">
             <div class="projects-div">
-                <a href="https://github.com/JordanDevelops/JordanDevelops.github.io" class="btn-view" target="_blank">
+                <a href="https://github.com/JSCHLTE/Jschlte.github.io" class="btn-view" target="_blank">
                 <div class="projects-img"><img src="src/assets/images/portfolio.png" alt="My Portfolio" draggable="false"></div>
                 <div class="projects-text">
                         <h2>My Portfolio</h2>
                         <div class="projects-text-section">
-                            <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
+                            <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>Sass</span> and <span>JavaScript</span>.</p>
                         </div>
                 </div>
             </a>
@@ -111,7 +111,7 @@
                 <div class="projects-text">
                     <h2>NBA Player Stat Tracker</h2>
                     <div class="projects-text-section">
-                        <p>I made this website to practice pulling information from an API and making it look presentable to users. <span>HTML</span>, <span>SCSS</span> and <span>JavaScript</span>.</p>
+                        <p>I made this website to practice pulling information from an API and making it look presentable to users. <span>HTML</span>, <span>Sass</span> and <span>JavaScript</span>.</p>
                     </div>
                 </div>
             </a>
@@ -222,7 +222,7 @@
                 <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             </div>
         <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0</a></p>
+        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.1</a></p>
     </footer>
 </div>
 </body>
