--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <!--Fonts-->
 </head>
 <body>
+    <noscript> 
+        <div id="noscript-warning">*Most websites including this one will not function properly without JavaScript enabled. If you would like this website to have full functionality please allow this site to use JavaScript.*</div>
+    </noscript>
     <nav>
         <div class="logo">
             <h2>Jordan</h2>
@@ -47,9 +50,6 @@
     <header>
 <div class="wrapper">
         <section class="head-wrapper" id="top">
-            <noscript> 
-                <div id="noscript-warning">*This website does not function correctly without JavaScript, please enable JavaScript in your settings!*</div>
-            </noscript>
             <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
             <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
             <a href="#projects" class="head-button">Projects</a>
@@ -222,7 +222,7 @@
                 <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             </div>
         <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.1</a></p>
+        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.2</a></p>
     </footer>
 </div>
 </body>
