--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <header>
 <div class="wrapper">
         <section class="head-wrapper" id="top">
-            <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span>!</h1>
-            <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check me out on social media!</p>
+            <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span> 👋</h1>
+            <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check out my résumé!</p>
             <a href="#projects" class="head-button">Projects</a>
         </section>
     </header>
@@ -222,7 +222,7 @@
                 <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
             </div>
         <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.2</a></p>
+        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.3</a></p>
     </footer>
 </div>
 </body>
