--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
     <title>Jordan Schulte</title>
-    <link rel="icon" href="src/assets/images/logo.jpg" id="icon">
+    <link rel="icon" href="src/assets/images/logo.png" id="icon">
     <link rel="stylesheet" href="src/sass/style.css">
     <!--Scrips/Links-->
     <script src="src/javascript/script.js" defer></script>
