--- a/index.html
+++ b/index.html
@@ -1,229 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@800&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ade9626c0b.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./src/assets/js-logo.webp" type="image/x-icon">
     <title>Jordan Schulte</title>
-    <link rel="icon" href="src/assets/images/logo.png" id="icon">
-    <link rel="stylesheet" href="src/sass/style.css">
-    <!--Scrips/Links-->
-    <script src="src/javascript/script.js" defer></script>
-    <script src="https://kit.fontawesome.com/58b34f234f.js" crossorigin="anonymous"></script>
-    <!--Scrips/Links-->
-    <!--Fonts-->
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&display=swap" rel="stylesheet">
-    <!--Fonts-->
-</head>
-<body>
-    <noscript> 
-        <div id="noscript-warning">*Most websites including this one will not function properly without JavaScript enabled. If you would like this website to have full functionality please allow this site to use JavaScript.*</div>
-    </noscript>
-    <nav>
-        <div class="logo">
-            <h2>Jordan</h2>
-        </div>
-            <div class="nav-links">
-                <a href="#skills" class="nav-item">Skills</a>
-                <a href="#projects" class="nav-item">Projects</a>
-                <a href="src/assets/dl_content/Jordans_Resume.pdf" download class="nav-item" title="Download my Résumé (pdf)">Résumé</a>
-                <div class="navContent">
-                    <a href="#socials" class="dropbtn nav-item">Social Media <i class="fas fa-chevron-down"></i></a>
-                    <div class="dropdown-content">
-                        <a href="https://twitter.com/JSCHLTE" target="_blank">Twitter</a>
-                        <a href="https://github.com/JSCHLTE" target="_blank">GitHub</a>
-                        <a href="mailto:email.jordanschulte@gmail.com">Email</a>
-                    </div>
-                </div>
-            </div>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        <div class="theme" data-tooltip="Toggle Theme">
-            <i class="fas fa-sun" id="theme-mode"></i>
-        </div>
-    </nav>
-    <header>
-<div class="wrapper">
-        <section class="head-wrapper" id="top">
-            <h1 class="head-title">Hello, my name is <span>Jordan Schulte</span> 👋</h1>
-            <p class="head-paragraph" id="skills">I am aspiring to become a Front-end web developer. View my projects below or check out my résumé!</p>
-            <a href="#projects" class="head-button">Projects</a>
-        </section>
-    </header>
-    <main>
-        <section class="skills-wrapper">
-            <div class="skills-title">
-                <h1>My Skills</h1>
-            </div>
-            <div class="skills-set">
-                <div class="skill-wrap">
-                    <div class="skill-icon"><i class="fas fa-mobile-alt"></i></div>
-                    <div class="skill-title"><h2>Supported</h2></div>
-                    <div class="skill-message">
-                        <p>All my apps and websites are developed to look good on every device!</p>
-                    </div>
-                </div>
-                <div class="skill-wrap">
-                    <div class="skill-icon"><i class="far fa-gem"></i></div>
-                    <div class="skill-title"><h2>Quality</h2></div>
-                    <div class="skill-message">
-                        <p>All my apps and websites are developed with care, passion and quality.</p>
-                    </div>
-                </div>
-                <div class="skill-wrap">
-                    <div class="skill-icon"><i class="far fa-user"></i></div>
-                    <div class="skill-title"><h2>User Friendly</h2></div>
-                    <div class="skill-message">
-                        <p>All my apps and websites are developed to be user friendly, I make sure my websites look clean and are easy for users to navigate.</p>
-                    </div>
-                </div>
-                <div class="skill-wrap">
-                    <div class="skill-icon"><i class="far fa-file-code"></i></div>
-                    <div class="skill-title"><h2>Skills</h2></div>
-                    <div class="skill-message">
-                        <p>Some of my skills include HTML, CSS, Sass, JavaScript and Github</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="projects-wrapper" id="projects">
-            <h1 class="projects-title">Top Projects</h1>
-        <div class="projects-container">
-            <div class="projects-div">
-                <a href="https://github.com/JSCHLTE/Jschlte.github.io" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/portfolio.png" alt="My Portfolio" draggable="false"></div>
-                <div class="projects-text">
-                        <h2>My Portfolio</h2>
-                        <div class="projects-text-section">
-                            <p>I built this website to showcase all my projects I have worked on / built. This website was built with <span>HTML</span>, <span>Sass</span> and <span>JavaScript</span>.</p>
-                        </div>
-                </div>
-            </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://nbaplayerstattracker.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/iap.png" alt="In-App Free" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>NBA Player Stat Tracker</h2>
-                    <div class="projects-text-section">
-                        <p>I made this website to practice pulling information from an API and making it look presentable to users. <span>HTML</span>, <span>Sass</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-            </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://harmonious-cocada-f1db99.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/mapsclone.png" alt="Google Maps Clone" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Google Maps Clone</h2>
-                    <div class="projects-text-section">
-                        <p>Google Maps Clone using Mapbox.</p>
-                    </div>
-                </div>
-            </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://weather-app-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/weather.png" alt="Weather App" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Weather App</h2>
-                    <div class="projects-text-section">
-                        <p>Made this website to practice my pulling information from API's. This uses the OpenWeather API. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://wwwnotes.netlify.app" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/wwwNotes.png" alt="Jordan's Note's App." draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Notes App</h2>
-                    <div class="projects-text-section">
-                        <p>I made this project because I needed to store information for games and homework. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://jordan-todo-list.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/jdl.png" alt="Jordan's To-do List" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>To-do List</h2>
-                    <div class="projects-text-section">
-                        <p>I made this website for my grocery shopping and to sharpen my JavaScript skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://number-guesser-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/ngg.png" alt="Jordan's Number Guesser Game." draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Number Guesser</h2>
-                    <div class="projects-text-section">
-                        <p>This was a game I had done for boces, but I decided to upgrade it. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://rock-paper-scissors-jordan.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/rps.png" alt="Rock, Paper, Scissors" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Rock, Paper, Scissors</h2>
-                    <div class="projects-text-section">
-                    <p>Rock, Paper, Scissors made this game with vanilla JavaScript to tone my skills. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://jordan-birthday-countdown.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/countdown.png" alt="Countdown Timer" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Countdown Timer</h2>
-                    <div class="projects-text-section">
-                        <p>Made this to practice my JavaScript skills and to test out the Date objects. <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-                </a>
-            </div>
-            <div class="projects-div">
-                <a href="https://competentcreators.netlify.app/" class="btn-view" target="_blank">
-                <div class="projects-img"><img src="src/assets/images/cc.png" alt="Competent Creators" draggable="false"></div>
-                <div class="projects-text">
-                    <h2>Competent Creators</h2>
-                    <div class="projects-text-section">
-                        <p>I built this website for a friend who made pretty cool gfx so I made him a website. This website was built with <span>HTML</span>, <span>CSS</span> and <span>JavaScript</span>.</p>
-                    </div>
-                </div>
-            </a>
-            </div>
-        </div>
-        </section>
-    </main>
-    <a href="#top" class="btt" title="Back To Top" data-tooltip="Back to Top"><i class="fas fa-angle-up"></i></a>
-    <div class="notification-light">
-        <p>Theme has been set to <span class="accent-color">Light</span> mode.</p>
-    </div>
-    <div class="notification-dark">
-        <p>Theme has been set to <span class="accent-color">Dark</span> mode.</p>
-    </div>
-    <footer class="foot-wrapper" id="socials">
-        <h1>Thanks for visiting</h1>
-            <div class="media-a">
-                <a href="https://twitter.com/JSCHLTE" target="_blank" data-tooltip="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://github.com/JSCHLTE" target="_blank" data-tooltip="GitHub"><i class="fab fa-github"></i></a>
-                <a href="mailto:email.jordanschulte@gmail.com" target="_blank" data-tooltip="Email Me"><i class="fas fa-envelope"></i></a>
-            </div>
-        <p class="copyright">Copyright © 2022, Jordan.</p>
-        <p class="version"><a href="https://github.com/JSCHLTE/Jschlte.github.io" target="_blank">version 4.0.4</a></p>
-    </footer>
-</div>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
